@@ -33,6 +33,8 @@
 	integrated Samat Yusupov's dbh driver methods for PHP PDO 
 	added stmt driver methods for suspending/resuming result sets to the
 		PHP PDO driver
+	added row cache to mysql drop-in replacement library to fix issues on
+		systems with 32-bit pointers
 
 0.57 - fixed an overloaded virtual function error in sqlr-status
 	fixed parsing of "term as type" clauses in queries
